@@ -1,10 +1,12 @@
 <?php
 defined('TYPO3_MODE') || die('Access denied.');
 
+$table = 'tt_content';
+
 $listType = AGENCY_EXT;
 
-$GLOBALS['TCA']['tt_content']['types']['list']['subtypes_excludelist'][$listType] = 'layout,select_key';
-$GLOBALS['TCA']['tt_content']['types']['list']['subtypes_addlist'][$listType] = 'pi_flexform';
+$GLOBALS['TCA'][$table]['types']['list']['subtypes_excludelist'][$listType] = 'layout,select_key';
+$GLOBALS['TCA'][$table]['types']['list']['subtypes_addlist'][$listType] = 'pi_flexform';
 
 \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addPiFlexFormValue($listType, 'FILE:EXT:' . AGENCY_EXT . '/pi/flexform_ds_pi.xml');
 
