@@ -50,7 +50,7 @@
         <!-- ###SUB_ERROR_FIELD_password### -->
         <!-- ###SUB_REQUIRED_FIELD_password### -->
         <div class="viewInput divInputPassword">
-            <p >###MISSING_PASSWORD###</p>
+            <p>###MISSING_PASSWORD###</p>
         </div>
         <!-- ###SUB_REQUIRED_FIELD_password### -->
         <div class="viewInput divInputPassword">
